cmake_minimum_required (VERSION 2.6)
project (gb_proto_parse)
set(CMAKE_C_FLAGS ${CMAKE_C_FLAGS} "-g -Wall -fPIC -Wextra -Wmissing-prototypes -Wno-long-long -Wno-unused-parameter -DDEFLATE_CODEC -DSNAPPY_CODEC -D_GNU_SOURCE -D_THREAD_SAFE")
SET(LIBRARY_OUTPUT_PATH "${CMAKE_SOURCE_DIR}/lib/")  
include_directories ("${PROJECT_SOURCE_DIR}/gen/")  
include_directories("${PROJECT_SOURCE_DIR}/")
include_directories("../${PROJECT_SOURCE_DIR}/include")
link_directories(../${PROJECT_SOURCE_DIR}/lib)
aux_source_directory(. DIR_SRCS)
add_subdirectory(gen)
add_executable(gb_l2_test gb_l2_test.c)
add_executable(gb_gmm_sm_test gb_gmm_sm_test.c)
add_executable(gb_protocol_test gb_protocol_test.c)
target_link_libraries(gb_l2_test gb_proto)
target_link_libraries(gb_protocol_test gb_proto)
target_link_libraries(gb_gmm_sm_test gb_proto)
set_target_properties(gb_l2_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY .)
set_target_properties(gb_protocol_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY .)
set_target_properties(gb_gmm_sm_test PROPERTIES RUNTIME_OUTPUT_DIRECTORY .)
